--- a/CSS/style0.html
+++ b/CSS/style0.html
@@ -4,7 +4,7 @@
     <title>MY Webpage</title>
   </head>
   <body>
-    <h1 style="color:blue; text-align:center;">Welcome to my Webpage!</h1>
+    <h1 style="color:red; text-align:center;">Welcome to my Webpage!</h1>
     <p> This is a paragraph of text </p>
     <p> This is another paragraph </p>
   </body>
